# federated-iban-disambiguation

./: .gitignore  README.md  riunione.md
DatasetGenerator/: .gitignore  dataset_generator.py
Embeddings/: test-char-based-bert.ipynb
FederatedLearning/: main.py  model.py
GraphNeuralNetworks/: .gitignore  BERT_embeddings_test.ipynb  gnn_model.py  link_prediction.py  old_link_prediction  requirements.txt  saveOutput.py  test_embeddings.ipynb
Sistema_poli/: dataset_100_IBAN_prova.csv  test.ipynb
UnitoBertNer/: README.md  requirements.txt  unitoBert.py  unitoBertNer.py
flower-bertmlp/: .gitignore  README.md  pyproject.toml
flower-bertmlp/config/: fl_parameters.json  flower_exp_bertmlp.yaml
flower-bertmlp/flower_bertmlp/: client_app copy.py  client_app.py  download.py  server_app.py  task.py
flower-bertmlp/lib/: CBertClassif.py
flower-mlp/: .gitignore  README.md  pyproject.toml  requirements.txt
flower-mlp/config/: flower_exp_kernel_nn.yaml
flower-mlp/flower_mlp/: client_app.py  server_app.py  task.py
gnn/: .gitignore  README.md  link_prediction.py
intesa_CharacterBERT_clustering/: .gitignore  README.md  clustering.py  couple_prediction.py  create-datasets.zsh  create-sim-datasets-kernel.zsh  cross_validation.py  execute_couple_prediction.zsh  execute_couple_prediction_2.zsh  federated_learning.py  find_partial_cliques.py  flower-run.py  kernel-classify.py  launch-all-bert.zsh  launch-all-clustering-syn.zsh  launch-all-clustering.zsh  launch-all-nn.zsh  launch-all.zsh  launchexp-clustering.zsh  launchexp-nn.zsh  launchexp.zsh  preprocessing.py  pyproject.toml  requirements.txt  seeds.txt  split_dataset.py  test-clients-only.py  test_clustering_fl.py
intesa_CharacterBERT_clustering/clique_analysis/: clique-analysis.py  find_partial_cliques.py  run_all.zsh
intesa_CharacterBERT_clustering/config/: alg.yaml  alg_frozen.yaml  alg_kernel_lr.yaml  alg_kernel_nn.yaml  alg_pretrain.yaml  cluster_params.yaml  exp.yaml  exp_centralized.yaml  exp_federated.yaml  exp_frozen.yaml  exp_kernel_lr.yaml  exp_kernel_lr_centralized.yaml  exp_kernel_nn.yaml  exp_kernel_nn_centralized.yaml  exp_new.yaml  exp_pretrained.yaml  fl_parameters.json  new_alg.yaml  new_exp_centralized.yaml  param_cbert_frz_sep.json  parameters.json  parameters_FullCBert.json
intesa_CharacterBERT_clustering/lib/: CBertClassif.py  CBertClassifFrz.py  CBertClassifFrzSep.py  CharacterBertForClassification.py  CharacterBertForClassificationOptimized.py  CharacterBertForClassificationOptimizedFreezed.py  CharacterBertForClassificationOptimizedFreezedSeparated.py  MyFLClient.py  MyFLClustering.py  algorithms.py  datasetManipulation.py  kernel_sim_data_utils.py  lr.py  models.py  myDataset.py
intra-accounts-disambiguation/: .gitignore  couple_prediction.py  create-datasets.zsh  cross_validation.py  federated_learning.py  launch-all-nn.zsh  launchexp-nn-only-clients.zsh  launchexp-nn.zsh  launchexp.zsh  preprocessing.py  pyproject.toml  seeds.txt  split_dataset.py  (+1 more)
intra-accounts-disambiguation/clique_analysis/: README.md  clique-analysis.py  pyproject.toml  run_all.zsh
synthetic-data-generator/: .gitignore  README.md  dataset_generator.py  pyproject.toml  requirements.txt
synthetic-data-generator/config/: parameters.json
synthetic-data-generator/lib/: permutations.py
(+92 files in other folders)
