[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-mlp"
version = "1.0.0"
description = ""
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "flwr>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "scikit-learn>=1.6.1",
    "fluke-fl>=0.7.2",
    "gdown>=5.2.0",
    "imblearn>=0.0",
    "regex>=2024.11.6",
    "transformers>=4.51.3",
    "unicode>=2.9",
    "unidecode>=1.3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "matteo"

[tool.flwr.app.components]
serverapp = "flower_mlp.server_app:app"
clientapp = "flower_mlp.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 30
fraction-fit = 0.5
local-epochs = 4

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true

