[project]
name = "intesa-characterbert-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fluke-fl>=0.7.2",
    "gdown>=5.2.0",
    "regex>=2024.11.6",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "unicode>=2.9",
    "unidecode>=1.3.8",
]
