[project]
name = "synthetic-data-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama==0.4.6",
    "editdistance==0.8.1",
    "et-xmlfile==1.1.0",
    "faker==24.0.0",
    "ipython==8.22.2",
    "numpy==1.26.4",
    "openpyxl==3.1.2",
    "pandas==2.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "six==1.16.0",
    "tqdm==4.66.2",
    "tzdata==2024.1",
]
