[project]
name = "intra-accounts-disambiguation-clique-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]
